          page counter (reset to 0 every time you switch the printer on)
          This should allow PyKota to work reasonably fine with HP Laserjet
          4L/5L/6L, not perfect, but better than nothing.
          See http://web.mit.edu/source/third/lprng/doc/LPRng-HOWTO-15.html
          For a more accurate accounting, never switch your HP printers
          off.
          
        - A bug was fixed when edpykota --add was used with users who already
          had a quota on the specified printer.
          
        - A small display bug in repykota was introduced in preliminary 
          1.03 versions, and fixed later on.
          
        - Some minor bugs which happened in rare situations were fixed.
        
        - Support for AppleTalk printers was added, see sample configuration
          file for details.
        
    - 1.02 :
    
        - The installation script now checks for software availability
          and in case a software is missing asks the user if he
          wants to continue with the installation or abort it.
          
        - The configuration file pykota.conf is now expected to be 
          found in /etc instead of in /etc/cups
          The installation script prompts the user to see if he
          wants to move an old configuration file to the new location
          if needed.
          
        - Improved documentation.
        
        - You can now set the tcp/ip port on which the Quota Storage
          Server is listening, see sample configuration file for details.
        
        - Better general error handling.
        
        - Upgrade script for pre 1.01 PostgreSQL database schema is now
          included as well.
        
    - 1.01 :
    
        - The configuration file now accepts an option   
          to choose the recipient(s) of the email messages :
          
            - DevNull means no one will receive them.
            - User means only the user will receive them.